--- a/src/app/resume-references/resume-references.component.html
+++ b/src/app/resume-references/resume-references.component.html
@@ -1,6 +1,6 @@
-<div class="section-title">{{refs.title}}</div>
+<div class="section-title">{{title}}</div>
 <div class="ui grid resume-reference">
-  <div class="row" *ngFor="let ref of refs.references">
+  <div class="row" *ngFor="let ref of references">
     <app-resume-reference [reference]="ref"></app-resume-reference>
   </div>
 </div>
